--- a/graphql/package.json
+++ b/graphql/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:schema": "psql \"$DB_URL\" -f src/schema.sql",
+    "seed:chain": "tsx src/seed.ts",
+    "dev:api": "tsx src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "@types/pg": "^8.15.5",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
@@ -18,6 +22,8 @@
     "@apollo/server": "^5.0.0",
     "dotenv": "^17.2.1",
     "graphql": "^16.11.0",
-    "pg": "^8.16.3"
+    "graphql-tag": "^2.12.6",
+    "pg": "^8.16.3",
+    "viem": "^2.33.3"
   }
 }
