--- a/blitz-seoul-web/package.json
+++ b/blitz-seoul-web/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.921.0",
+    "@aws-sdk/lib-storage": "^3.921.0",
+    "@google/genai": "^1.28.0",
     "@privy-io/react-auth": "^3.4.1",
     "next": "16.0.1",
     "react": "19.2.0",
